Created money button and output elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="index.css" type="text/css"/>
   </head>
   <body onload="alert('Warning!\nProceed at your own risk...');">
+    <div id="machine"></div>
+    <p id="out"> </p>
+    <button onclick="addMoney();">Click Here...</button>
     <script src="index.js"></script>
   </body>
 </html>
