display random values

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="index.css" type="text/css"/>
   </head>
   <body onload="alert('Warning!\nProceed at your own risk...');">
-    <div id="machine"></div>
+    <div id="machine">
+      <p class="slots" id="slot1"></p>
+      <p class="slots" id="slot2"></p>
+      <p class="slots" id="slot3"></p>
+    </div>
     <p id="out"> </p>
     <button onclick="addMoney();">Click Here...</button>
+    <button onclick="spin();">Spin!</button>
     <script src="index.js"></script>
   </body>
 </html>
