--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       </div>
       <div class="slots">
         <p id="slot2"> </p>
-      
+      </div>
+      <div class="slots">
         <p id="slot3"> </p>
+      </div>
     </span>
     <p id="out"> </p>
     <button onclick="addMoney();">Click Here...</button>
